[gd_scene load_steps=9 format=3 uid="uid://cc1g06ni85qpm"]

[ext_resource type="PackedScene" uid="uid://bvwnhqr48a6sl" path="res://jugador/character_body_2d.tscn" id="1_7x80c"]
[ext_resource type="Script" path="res://Pong/Pong.gd" id="1_d2mbu"]
[ext_resource type="PackedScene" uid="uid://dluodak2agj1d" path="res://computer/computer.tscn" id="2_keuv4"]
[ext_resource type="PackedScene" uid="uid://drva1eyjtjfvi" path="res://pelota/pelota.tscn" id="3_5cekt"]
[ext_resource type="Texture2D" uid="uid://bqqmi674gjc1k" path="res://sprites/pared.png" id="4_gbqwg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gch4q"]
size = Vector2(1278, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2k73x"]
size = Vector2(32, 719)

[sub_resource type="LabelSettings" id="LabelSettings_0n3sv"]
font_size = 45

[node name="Pong" type="Node2D"]
script = ExtResource("1_d2mbu")

[node name="Computer" parent="." instance=ExtResource("2_keuv4")]

[node name="Pelota" parent="." instance=ExtResource("3_5cekt")]

[node name="jugador" parent="." instance=ExtResource("1_7x80c")]

[node name="ParedAbajo" type="StaticBody2D" parent="."]
position = Vector2(640, 736)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="ParedAbajo"]
texture = ExtResource("4_gbqwg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParedAbajo"]
position = Vector2(1, 1)
shape = SubResource("RectangleShape2D_gch4q")

[node name="ParedArriba" type="StaticBody2D" parent="."]
position = Vector2(640, -18)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="ParedArriba"]
texture = ExtResource("4_gbqwg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParedArriba"]
position = Vector2(1, 1)
shape = SubResource("RectangleShape2D_gch4q")

[node name="GolIzquierdo" type="Area2D" parent="."]
position = Vector2(-4, 360)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="GolIzquierdo"]
position = Vector2(-2, 0.5)
shape = SubResource("RectangleShape2D_2k73x")

[node name="GolDerecho" type="Area2D" parent="."]
position = Vector2(1293, 360)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="GolDerecho"]
position = Vector2(-2, 0.5)
shape = SubResource("RectangleShape2D_2k73x")

[node name="JugadorPuntaje" type="Label" parent="."]
offset_left = 565.0
offset_top = 49.0
offset_right = 605.0
offset_bottom = 72.0
text = "0"
label_settings = SubResource("LabelSettings_0n3sv")
horizontal_alignment = 1
metadata/_edit_group_ = true

[node name="ComputerScore" type="Label" parent="."]
offset_left = 686.0
offset_top = 49.0
offset_right = 726.0
offset_bottom = 112.0
text = "0"
label_settings = SubResource("LabelSettings_0n3sv")
horizontal_alignment = 1
metadata/_edit_group_ = true

[connection signal="body_entered" from="GolIzquierdo" to="." method="_on_gol_izquierdo_body_entered"]
[connection signal="body_entered" from="GolDerecho" to="." method="_on_gol_derecho_body_entered"]
